test_cases/fail/f22.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
PRINT: "hello world
END SCRIPT
